--- a/assignment_2/da3_a2_technical_report.Rmd
+++ b/assignment_2/da3_a2_technical_report.Rmd
@@ -809,4 +809,4 @@ kable(result_subsamples, booktabs = TRUE) %>% kable_styling(full_width= F, latex
 We can see from the above table that prices of small size apartments are slightly harder to predict than medium size apartments. However, for condo and loft there is not much difference regarding predictive performance. Besides, Côte-des-Neiges-Notre-Dame-de-Grâce and Westmount, the two districts at the west part of city center, are harder than other inner city districts to predict price. 
 
 # Conclusion
-Among 7 OLS models, Lasso and Random Forest, Random Forest has the best prediction performance. By robustness check, I found out by excluding apartments with extreme value prices, prediction performance can be improved significantly. So given that the properties of our company are normal apartments without extraordinary features, I would use Random Forest on data without extreme values of price for prediction. However, we still keep in mind that depending on the location and features the properties of our company, we might have different prediction performance.
+Among 7 OLS models, Lasso and Random Forest, Random Forest has the best prediction performance. By robustness check, I found out by excluding apartments with extreme value prices, prediction performance can be improved significantly. So given that the properties of our company are normal apartments without extraordinary features, I would use Random Forest on data without extreme values of price for prediction. Besides, we should keep in mind that depending on the location and features the properties of our company, we might have different prediction performance. Last but not least, improving amenities, host verification, availability, and other features might enable us to set a relative higher price to generate higher profit for our business.
